[gd_scene load_steps=4 format=3 uid="uid://gfjepopki4k2"]

[ext_resource type="Script" path="res://UI/Scenes/AddCharacter/AvatarSelectCircle/AvatarSelectCircle.gd" id="1_daff6"]
[ext_resource type="PackedScene" uid="uid://dcgwtpk6myift" path="res://UI/MultiLayerButton/MultiLayerButton.tscn" id="2_b55s8"]

[sub_resource type="ImageTexture" id="ImageTexture_cgtp4"]

[node name="AvatarSelectCircle" type="PanelContainer"]
offset_right = 512.0
offset_bottom = 512.0
mouse_filter = 2
script = ExtResource("1_daff6")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
z_index = 2
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
own_world_3d = true
handle_input_locally = false
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1, -1.988)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(0.926548, 0.0973615, 0.363358, 0, -0.965926, 0.258819, 0.376176, -0.239808, -0.894977, 0, 0, 0)
directional_shadow_mode = 0
sky_mode = 1

[node name="MultiLayerButton" parent="." instance=ExtResource("2_b55s8")]
layout_mode = 2
icon = SubResource("ImageTexture_cgtp4")

[connection signal="ControllerPressed" from="MultiLayerButton" to="." method="_on_multi_layer_button_controller_pressed"]
[connection signal="focus_entered" from="MultiLayerButton" to="MultiLayerButton" method="_on_focus_entered"]
[connection signal="pressed" from="MultiLayerButton" to="MultiLayerButton" method="_on_pressed"]
